--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,3 +6,6 @@ description = "Natural language activity tracker"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
