Support different sheets for friend and me
having two trackers for two people is wasteful, this code smells. this is a quick and dirty solution but I will find a better one

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 SPREADSHEET_ID=""
-SHEET_NAME=""
+FRIEND_SHEET_NAME=""
+MY_SHEET_NAME=""
+FRIEND_TELEGRAM_ID=""
+MY_TELEGRAM_ID=""
 CREDENTIALS_PATH=""
 OPENAI_API_KEY=""
