--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build: .
     volumes:
       - .:/app
-      - ~/.local/share/activity-bot:/data
+      - sqlite_data:/data/sqlite
     environment:
       - SPREADSHEET_ID=${SPREADSHEET_ID}
       - FRIEND_SHEET_NAME=${FRIEND_SHEET_NAME}
@@ -13,5 +13,9 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - TELEGRAM_BOT_API_KEY=${TELEGRAM_BOT_API_KEY}
       - GOOGLE_CREDENTIALS=${GOOGLE_CREDENTIALS}
+      - DATABASE_URL=/data/sqlite/higher-pleasures.db
     restart: unless-stopped
     init: true
+
+volumes:
+  sqlite_data:
