Add SQLite database persistence across deployments
- Add named volume 'sqlite_data' in docker-compose.yml
- Configure database directory permissions in Dockerfile
- Update .dockerignore to exclude database files
- Ensure data survives container rebuilds and restarts

This change prevents data loss when the container is redeployed
or rebuilt, storing the SQLite database in a persistent Docker
volume instead of the container filesystem.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,8 @@ services:
     build: .
     volumes:
       - .:/app
-      - sqlite_data:/data/sqlite
+      - sqlite_data:/app/database 
+      - ~/.local/share/activity-bot:/data
     environment:
       - SPREADSHEET_ID=${SPREADSHEET_ID}
       - FRIEND_SHEET_NAME=${FRIEND_SHEET_NAME}
