Ensure SQLite data persists across Docker deployments
- Configure explicit named volume for SQLite database
- Update volume mount points to match database URL path
- Add directory creation with proper permissions in Dockerfile
- Fix database path consistency between compose and environment
- Document deployment considerations for Render

This change ensures database persistence when redeploying the
service on Render by properly configuring Docker volumes and
maintaining consistent paths.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ services:
     build: .
     volumes:
       - .:/app
-      - sqlite_data:/app/database 
-      - ~/.local/share/activity-bot:/data
+      - activity_data:/data/sqlite:rw
     environment:
       - SPREADSHEET_ID=${SPREADSHEET_ID}
       - FRIEND_SHEET_NAME=${FRIEND_SHEET_NAME}
@@ -14,9 +13,11 @@ services:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - TELEGRAM_BOT_API_KEY=${TELEGRAM_BOT_API_KEY}
       - GOOGLE_CREDENTIALS=${GOOGLE_CREDENTIALS}
+      # Updated database URL to match volume mount point
       - DATABASE_URL=/data/sqlite/higher-pleasures.db
     restart: unless-stopped
     init: true
 
 volumes:
-  sqlite_data:
+  activity_data:
+    name: activity_bot_data  
