--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-# Core dependencies
-python-dotenv==1.0.1
-openai==1.59.6
-google-api-python-client==2.158.0
-google-auth==2.37.0
-google-auth-oauthlib==1.2.1
-python-telegram-bot==21.10
-
-# Additional dependencies will be installed through their own dependencies
 aiohappyeyeballs==2.4.4
 aiohttp==3.11.11
 aiohttp-retry==2.8.3
@@ -20,9 +11,14 @@ certifi==2024.12.14
 charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
+fastapi==0.115.8
 Flask==3.1.0
 frozenlist==1.5.0
 google-api-core==2.24.0
+google-api-python-client==2.158.0
+google-auth==2.37.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.1
 googleapis-common-protos==1.66.0
 h11==0.14.0
 httpcore==1.0.7
@@ -36,6 +32,7 @@ jiter==0.8.2
 MarkupSafe==3.0.2
 multidict==6.1.0
 oauthlib==3.2.2
+openai==1.59.6
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.3
@@ -45,13 +42,19 @@ pydantic==2.10.5
 pydantic_core==2.27.2
 PyJWT==2.10.1
 pyparsing==3.2.1
+python-dotenv==1.0.1
+python-telegram-bot==21.10
+requests==2.32.3
+requests-oauthlib==2.0.0
 rsa==4.9
 ruff==0.9.1
 sniffio==1.3.1
+starlette==0.45.3
 tqdm==4.67.1
 twilio==9.4.3
 typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
+uvicorn==0.34.0
 Werkzeug==3.1.3
 yarl==1.18.3
