--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ lint.ignore = [
     "D415", # Don't require closing punctuation in docstrings
     "D400", # Same as above
     "TRY003", # Don't require custom exception classes with default error messages/allow long error messages to be passed into exception class
+    "G004", # allow f strings to be passed into logging
 ]
 
 # Enforce absolute imports
