--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,16 @@ attrs==24.3.0
 blinker==1.9.0
 cachetools==5.5.0
 certifi==2024.12.14
+cffi==1.17.1
+cfgv==3.4.0
 charset-normalizer==3.4.1
 click==8.1.8
+cryptography==44.0.1
+distlib==0.3.9
 distro==1.9.0
+ecdsa==0.19.0
 fastapi==0.115.8
+filelock==3.17.0
 Flask==3.1.0
 frozenlist==1.5.0
 google-api-core==2.24.0
@@ -24,6 +30,7 @@ h11==0.14.0
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
+identify==2.6.7
 idna==3.10
 isort==5.13.2
 itsdangerous==2.2.0
@@ -31,23 +38,31 @@ Jinja2==3.1.5
 jiter==0.8.2
 MarkupSafe==3.0.2
 multidict==6.1.0
+nodeenv==1.9.1
 oauthlib==3.2.2
 openai==1.59.6
+passlib==1.7.4
+platformdirs==4.3.6
+pre_commit==4.1.0
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.3
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
+pycparser==2.22
 pydantic==2.10.5
 pydantic_core==2.27.2
 PyJWT==2.10.1
 pyparsing==3.2.1
 python-dotenv==1.0.1
+python-jose==3.3.0
 python-telegram-bot==21.10
+PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
-ruff==0.9.1
+ruff==0.9.6
+six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
 tqdm==4.67.1
@@ -56,5 +71,6 @@ typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.3.0
 uvicorn==0.34.0
+virtualenv==20.29.2
 Werkzeug==3.1.3
 yarl==1.18.3
