--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - ${DATA_PATH:-./data}:/data
     environment:
       - DATABASE_URL=/data/db/higher-pleasures.db
-    command: uvicorn src.db_api.main:app --host 0.0.0.0 --port 8000 --reload
+    command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       - activity-bot
     init: true
