--- a/frontend/higher-pleasures-dashboard/package.json
+++ b/frontend/higher-pleasures-dashboard/package.json
@@ -12,12 +12,13 @@
   },
   "dependencies": {
     "axios": "^1.8.1",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/node": "^22.13.5",
+    "@types/node": "^22.13.6",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^8.25.0",
