Setup initial postgres support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,21 @@
 services:
+  postgres:
+    image: postgres:15
+    container_name: higher-pleasures-postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: higher_pleasures
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
   activity-bot:
     build: .
     volumes:
@@ -14,10 +31,14 @@ services:
       - TELEGRAM_BOT_API_KEY=${TELEGRAM_BOT_API_KEY}
       - GOOGLE_CREDENTIALS=${GOOGLE_CREDENTIALS}
       - DATABASE_URL=/data/db/higher-pleasures.db
+      - POSTGRES_URL=postgresql://postgres:postgres@postgres:5432/higher_pleasures
       - LOG_DIR=/data/logs
     restart: unless-stopped
     init: true
     user: "1000:1000"
+    depends_on:
+      postgres:
+        condition: service_healthy
   db_api:
     build: .
     ports:
@@ -27,12 +48,16 @@ services:
       - ${DATA_PATH:-./data}:/data
     environment:
       - DATABASE_URL=/data/db/higher-pleasures.db
+      - POSTGRES_URL=postgresql://postgres:postgres@postgres:5432/higher_pleasures
     command: uvicorn src.api.main:app --host 0.0.0.0 --port 8000 --reload
     depends_on:
       - activity-bot
+      - postgres
     init: true
     user: "1000:1000"
 
 volumes:
   activity_data:
     name: activity_bot_data
+  postgres_data:
+    name: higher_pleasures_postgres_data
