--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ pre_commit==4.1.0
 propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.3
+psycopg2==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
@@ -61,7 +62,7 @@ PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
-ruff==0.9.6
+ruff==0.11.0
 six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
