--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ propcache==0.2.1
 proto-plus==1.25.0
 protobuf==5.29.3
 psycopg2==2.9.10
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pycparser==2.22
