--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ lint.ignore = [
     "TD002", # allow TODO comments without authorship
     "D413", # don't require blank line at end of docstring
     "ERA001", # allow commented-out code
+    "E501", # don't enforce line length from linter
 ]
 
 # Enforce absolute imports
